manifests/applications/santa-message/base/santa-message-app-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: santa-message
  annotations:
    openshift.io/description: Santa Message (NGINX Angular)
    openshift.io/display-name: Santa Message
