manifests/applications/santa-message/base/santa-message-app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: santa-message
    app.kubernetes.io/component: santa-message
    app.kubernetes.io/instance: santa-message
  name: santa-message
  namespace: santa-message
spec:  
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  selector:
    deployment: santa-message
