manifests/applications/santa-message/base/santa-message-app-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: santa-message
  namespace: santa-message
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: santa-message
    weight: 100
  wildcardPolicy: None
